compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_inference_empty_match.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/inference_empty_match.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not parse Riot ML source
   ╭─[tests/fixtures/diagnostics/types/inference_empty_match.ml:3:3]
 2 │   let value = match 1 {
 3 │   };
   ·   ┬
   ·   ╰── match expression needs at least one arm
 4 │   println("bad")
   ╰────
